Fix z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,6 @@
 	height: 100%;
 	left: 0;
 	top: 0;
-	z-index: 1400;
 }
 .elfinder-picker-content{
 	padding: 16px;
